# spotify-list-maker

./: .gitignore  main.py  pyproject.toml
